--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <p>With our online editor, you can edit the CSS, and click on a button to view the result.</p>
         <pre>
           <code>
+
             body {
             background-color: lightblue;
             }
@@ -75,7 +76,8 @@
             p {
             font-family: verdana;
             font-size: 20px;
-            }</code>
+            }
+          </code>
         </pre>
         <hr>
         <h2>CSS Examples</h2>
@@ -99,8 +101,11 @@
     <section class="css-introduction" id="css-introduction">
       <div class="container">
         <h1>CSS Introduction</h1>
-        <a href="#css-home" class="btn-left">Previous</a>
-        <a href="#css-syntax" class="btn-right">Next</a>
+        <div class='btn-prev-next'>
+
+          <a href="#css-home" class="btn-left">Previous</a>
+          <a href="#css-syntax" class="btn-right">Next</a>
+        </div>
 
         <hr>
         <p>CSS is the language we use to style a Web page.</p>
@@ -143,8 +148,10 @@
         <h2>CSS Saves a Lot of Work!</h2>
         <p>The style definitions are normally saved in external .css files.</p>
         <p>With an external stylesheet file, you can change the look of an entire website by changing just one file!</p>
-        <a href="#css-introduction" class="btn-left">Previous</a>
-        <a href="#css-selectors" class="btn-right">Next</a>
+        <div class='btn-prev-next'>
+          <a href="#css-introduction" class="btn-left">Previous</a>
+          <a href="#css-selectors" class="btn-right">Next</a>
+        </div>
       </div>
     </section>
 
@@ -154,8 +161,10 @@
       <div class="container">
         <h1>CSS Syntax</h1>
 
-        <a href="#css-introduction" class="btn-left">Previous</a>
-        <a href="#css-selectors" class="btn-right">Next</a>
+        <div class='btn-prev-next'>
+          <a href="#css-introduction" class="btn-left">Previous</a>
+          <a href="#css-selectors" class="btn-right">Next</a>
+        </div>
         <p>A CSS rule consists of a selector and a declaration block.</p>
         <h2>CSS Syntax</h2>
         <img src="https://www.w3schools.com/css/img_selector.gif" alt="css-syntax-w3school">
@@ -182,8 +191,11 @@
           <li>text-align is a property, and center is the property value</li>
         </ul>
 
-        <a href="#" class="btn-left">Previous</a>
-        <a href="#" class="btn-right">Next</a>
+
+        <div class='btn-prev-next'>
+          <a href="#" class="btn-left">Previous</a>
+          <a href="#" class="btn-right">Next</a>
+        </div>
 
       </div>
     </section>
@@ -194,8 +206,11 @@
     <section class="css-selectors" id="css-selectors">
       <div class="container">
         <h1>CSS Selectors</h1>
-        <a href="#css-syntax" class="btn-left">Previous</a>
-        <a href="#how-to" class="btn-right">Next</a>
+
+        <div class='btn-prev-next'>
+          <a href="#css-syntax" class="btn-left">Previous</a>
+          <a href="#how-to" class="btn-right">Next</a>
+        </div>
         <hr>
         <p>A CSS selector selects the HTML element(s) you want to style.</p>
         <hr>
@@ -318,8 +333,11 @@
     <section class="how-to" id="how-to">
       <div class="container">
         <h1>How To Add CSS</h1>
-        <a href="#css-selectors" class="btn-left">Previous</a>
-        <a href="#comments" class="btn-right">Next</a>
+
+        <div class='btn-prev-next'>
+          <a href="#css-selectors" class="btn-left">Previous</a>
+          <a href="#comments" class="btn-right">Next</a>
+        </div>
         <hr>
         <p>When a browser reads a style sheet, it will format the HTML document according to the information in the
           style sheet.</p>
@@ -449,8 +467,10 @@
       <div class="container">
         <h1>CSS Comments</h1>
 
-        <a href="#how-to" class="btn-left">Previous</a>
-        <a href="#colors" class="btn-right">Next</a>
+        <div class='btn-prev-next'>
+          <a href="#how-to" class="btn-left">Previous</a>
+          <a href="#colors" class="btn-right">Next</a>
+        </div>
         <hr>
         <p>CSS comments are not displayed in the browser, but they can help document your source code.</p>
         <hr>
@@ -533,8 +553,11 @@
 
 
 
-        <a href="#how-to" class="btn-left">Previous</a>
-        <a href="#colors" class="btn-right">Next</a>
+
+        <div class='btn-prev-next'>
+          <a href="#how-to" class="btn-left">Previous</a>
+          <a href="#colors" class="btn-right">Next</a>
+        </div>
 
 
 
@@ -634,10 +657,6 @@
         </div>
         <p>Same as color name "Tomato", but 50% transparent:</p>
 
-        <div class="value-colors-container">
-          <div>rgba(255, 99, 71, 0.5)</div>
-          <div>hsla(9, 100%, 64%, 0.5)</div>
-        </div>
 
 
         <pre>
