--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div>
         <p>A CSS rule consists of a selector and a declaration block.</p>
         <h2>CSS Syntax</h2>
-        <img src="https://www.w3schools.com/css/img_selector.gif" alt="css-syntax-w3school">
+        <img class="img-css-syntax" src="https://www.w3schools.com/css/img_selector.gif" alt="css-syntax-w3school">
         <p>The selector points to the HTML element you want to style.</p>
         <p>The declaration block contains one or more declarations separated by semicolons.</p>
         <p>Each declaration includes a CSS property name and a value, separated by a colon.</p>
